--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   bloc: ^8.0.3
   bloc_test: ^9.0.3
+  connectivity_plus: ^2.3.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter:
