--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  hydrated_bloc: ^8.1.0
+  path_provider: ^2.0.9
   test: ^1.21.0
 
 dev_dependencies:
